# goit-pythonweb-hw-012

./: .env  .gitignore  docker-compose.yaml  main.py  pyproject.toml  readme.md  test_redis.py
docs/: api.rst  conf.py  modules.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/src/routes/: auth.html  contacts.html  users.html
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 4927765b3c56_add_password_reset_fields_to_user_model.py  679c6174bef4_create_initial_tables.py  773172900edf_add_role_to_user.py  a0db2991a573_create_initial_tables.py  a987a2828a82_add_avatar_to_the_user.py  d65ee6f55cee_create_initial_tables.py  d6fadee5969d_remove_default_role_from_user.py
src/conf/: config.py
src/database/: config.py  db.py
src/exceptions/: contact.py
src/models/: base.py  contact.py
src/repository/: contacts.py  user_repository.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  cloud_image.py  contacts.py  email.py  redis_service.py  user.py
src/utils/: auth.py
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py
tests/test_repository/: test_contacts.py  test_user_repository.py
tests/test_service/: test_contacts_service.py  test_user_service.py
